# pytest-typhoon-polarion

./: .gitignore  CHANGELOG.md  DEMO.md  LICENSE  README.md  config.txt  pyproject.toml  requirements  secrets  setup.py  tox.ini
demo/: DEMO.md  pytest.ini  run_all.ps1  run_server.ps1  run_setup.ps1  run_tests.ps1  secrets
demo/DemoExample/: test_demo_example.py
docs/extra/: SSL_cert_conf.md
src/: exceptions.py  plugin.py  runtime_settings.py  utils.py  work_items_utils.py
src/hooks_utils/: collection_modifyitems.py  configure.py  logs.py  terminal_summary.py
tests/: config.ini  pytest.ini  secrets  test_plugin.py  test_single_plugin.py  tox.ini
tests/Demo2/: secrets  test_demo2.py
tests/ExampleProject/: test_plugin.py
tests/old/: test_plugin.py
widget_templates/0_Alerts/: index.html  original.html  to_pol.html
widget_templates/1_Register/: index.html  to_pol.html
widget_templates/2_columns/: index.html  to_pol.html
widget_templates/3_autocomplete/: code.js  index.html  original.html
widget_templates/4_widget_execute_test/: index.html
