[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-typhoon-polarion"
authors = [{name = 'Tiarles Moralles Guterres', email = 'tiarles.moralles@typhoon-hil.com'}]
maintainers = [{name = 'Tiarles Moralles Guterres', email = 'tiarles.moralles@typhoon-hil.com'}]
description = 'Typhoontest plugin for Siemens Polarion'
version = '1.0.1'
license = {text = 'MIT'}
requires-python = '>=3.8'
dependencies = [
    "typhoontest>=1.27.0",
    "polarion==1.3.0"
]
classifiers=[
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]

[project.entry-points."pytest11"]
"pytest-typhoon-polarion" = "src.plugin"

[project.urls]
homepage='https://github.com/typhoon-hil/pytest-typhoon-polarion'

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["src*"]  # package names should match these glob patterns (["*"] by default)
# exclude = ["my_package.tests*"]  # exclude packages matching these glob patterns (empty by default)
# namespaces = false  # to disable scanning PEP 420 namespaces (true by default)
